Fixed gap in images caused by relative highlight

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ body
     z-index:1;
     border: blue 2px solid;
     height: 40px;
+    margin-bottom: -40px;
     background-color: #A0A0FF;
     opacity: 0.2;
     filter: alpha(opacity=20);
